tests/paczka1/fuzzy1/39585310.err
Error in line 18: 9E2hjxm92Y A344 3,0
Error in line 24: xS3iSh A344 1,1
Error in line 21: 9E2hjxm92Y S638 6,4
Error in line 1: S638 A639 41,3
Error in line 27: 5hEDE7gavv A639 69,0
